# rust-contests-workspace

./: Cargo.toml
.algo_lib/src/collections/: id.rs  mod.rs  multi_set.rs  test.rs
.algo_lib/src/io/: eol.rs  input.rs  mod.rs
.algo_lib/src/misc/: mod.rs
.algo_lib/src/numbers/: mod_int.rs
.algo_lib/src/string/: mod.rs  str.rs
algo_lib/: Cargo.toml
algo_lib/src/: lib.rs
algo_lib/src/collections/: dsu.rs  graph.rs  mod.rs  (+2 more)
main/src/: main.rs
tasks/a_coin_transformation/: Cargo.toml
tasks/a_mextable/: Cargo.toml
tasks/a_tender_carpenter/: Cargo.toml
tasks/b_digits/: Cargo.toml
tasks/b_gorilla_and_the_exam/: Cargo.toml
tasks/b_outstanding_impressionist/: Cargo.toml
tasks/c_bewitching_stargazer/: Cargo.toml
tasks/c_competitive_fishing/: Cargo.toml
tasks/c_ordered_permutations/: Cargo.toml
tasks/c_save_the_nature/: Cargo.toml
tasks/c_sums_on_segments/: Cargo.toml
tasks/c_swap_columns_and_find_apath/: Cargo.toml
tasks/c_trip_to_the_olympiad/: Cargo.toml
tasks/d1_zero_one_easy_version/: Cargo.toml
tasks/d2_zero_one_hard_version/: Cargo.toml
tasks/d_gifts_order/: Cargo.toml
tasks/d_kevin_and_competition_memories/: Cargo.toml
tasks/d_move_back_at_acost/: Cargo.toml
tasks/d_non_prime_tree/: Cargo.toml
tasks/d_problem_about_gcd/: Cargo.toml
tasks/d_refined_product_optimality/: Cargo.toml
tasks/e_matrix_transformation/: Cargo.toml
tasks/e_resourceful_caterpillar_sequence/: Cargo.toml
tasks/f_nim/: Cargo.toml
tasks/g_problem_with_queries/: Cargo.toml
templates/: main.rs
templates/sites/: codeforces.rs  default.rs
(+90 files in other folders)
