[workspace]
members = [
    "tasks/d_gifts_order",
    "tasks/c_trip_to_the_olympiad",
    "tasks/b_gorilla_and_the_exam",
    "tasks/a_mextable",
    "tasks/d2_zero_one_hard_version",
    "tasks/d1_zero_one_easy_version",
    "tasks/c_ordered_permutations",
    "tasks/d_non_prime_tree",
    "tasks/c_competitive_fishing",
    "tasks/d_kevin_and_competition_memories",
    # "main",
    "algo_lib",
]
resolver = "2"
